--- a/index.html
+++ b/index.html
@@ -1,55 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Stickman Jump</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stickman Game</title>
   <style>
     body {
       margin: 0;
       background: #0f0f0f;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: white;
       text-align: center;
-      font-family: sans-serif;
-    }
-    h1 {
-      color: #bc6ff1;
     }
     canvas {
-      background: #222;
       display: block;
-      margin: 30px auto;
+      margin: 20px auto;
+      background: #111;
       border: 2px solid #555;
+    }
+    #scoreboard {
+      margin-top: -10px;
+      font-size: 20px;
+    }
+    #gameOver {
+      display: none;
+      font-size: 24px;
+      color: #ff4c4c;
+    }
+    button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background: #bc6ff1;
+      border: none;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
-  <h1>Stickman Jump Game</h1>
-  <canvas id="gameCanvas" width="480" height="240"></canvas>
+  <h1>Stickman Jump Challenge</h1>
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <div id="scoreboard">
+    <span>Score: <span id="score">0</span></span> | 
+    <span>High Score: <span id="highScore">0</span></span>
+  </div>
+  <div id="gameOver">
+    <p>Game Over! 😵</p>
+    <button onclick="restartGame()">Play Again?</button>
+  </div>
 
   <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
 
-    let stickman = { x: 50, y: 190, vy: 0, width: 20, height: 40, onGround: true };
+    let stickman;
     let platforms = [];
-    const gravity = 0.8;
-    const jumpForce = -12;
-    const gameSpeed = 3;
+    let gravity = 0.8;
+    let jumpForce = -12;
+    let gameSpeed = 4;
+    let score = 0;
+    let highScore = 0;
+    let gameRunning = true;
 
-    document.addEventListener("keydown", (e) => {
-      if ((e.code === "Space" || e.code === "ArrowUp") && stickman.onGround) {
-        stickman.vy = jumpForce;
-        stickman.onGround = false;
-      }
-    });
+    function resetGame() {
+      stickman = {
+        x: 50,
+        y: 310,
+        vy: 0,
+        width: 20,
+        height: 50,
+        onGround: false
+      };
+      platforms = [];
+      score = 0;
+      gameRunning = true;
+      document.getElementById('gameOver').style.display = 'none';
+    }
+
+    function drawStickman(x, y) {
+      ctx.strokeStyle = '#0ff';
+      ctx.lineWidth = 3;
+      // Head
+      ctx.beginPath();
+      ctx.arc(x + 10, y + 10, 10, 0, Math.PI * 2);
+      ctx.stroke();
+      // Body
+      ctx.beginPath();
+      ctx.moveTo(x + 10, y + 20);
+      ctx.lineTo(x + 10, y + 40);
+      ctx.stroke();
+      // Arms
+      ctx.beginPath();
+      ctx.moveTo(x, y + 30);
+      ctx.lineTo(x + 20, y + 30);
+      ctx.stroke();
+      // Legs
+      ctx.beginPath();
+      ctx.moveTo(x + 10, y + 40);
+      ctx.lineTo(x, y + 60);
+      ctx.moveTo(x + 10, y + 40);
+      ctx.lineTo(x + 20, y + 60);
+      ctx.stroke();
+    }
 
     function spawnPlatform() {
-      platforms.push({ x: canvas.width, y: canvas.height - 20, width: 60, height: 20 });
+      const height = Math.random() < 0.5 ? 20 : 80; // random height (low or raised)
+      platforms.push({
+        x: canvas.width,
+        y: canvas.height - height,
+        width: 60,
+        height
+      });
     }
 
     function update() {
+      if (!gameRunning) return;
+
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+      // Stickman physics
       stickman.vy += gravity;
       stickman.y += stickman.vy;
 
@@ -59,32 +130,59 @@
         stickman.onGround = true;
       }
 
-      ctx.fillStyle = "#0ff";
-      ctx.fillRect(stickman.x, stickman.y, stickman.width, stickman.height);
+      drawStickman(stickman.x, stickman.y);
 
       platforms.forEach((plat, i) => {
         plat.x -= gameSpeed;
-        ctx.fillStyle = "#f0f";
+        ctx.fillStyle = '#f0f';
         ctx.fillRect(plat.x, plat.y, plat.width, plat.height);
 
+        // Collision check (game over)
         if (
           stickman.x < plat.x + plat.width &&
           stickman.x + stickman.width > plat.x &&
           stickman.y + stickman.height > plat.y &&
-          stickman.y + stickman.height < plat.y + plat.height
+          stickman.y < plat.y + plat.height
         ) {
-          stickman.y = plat.y - stickman.height;
-          stickman.vy = 0;
-          stickman.onGround = true;
+          gameOver();
         }
 
-        if (plat.x + plat.width < 0) platforms.splice(i, 1);
+        if (plat.x + plat.width < 0) {
+          platforms.splice(i, 1);
+          score++;
+          document.getElementById('score').innerText = score;
+          if (score > highScore) {
+            highScore = score;
+            document.getElementById('highScore').innerText = highScore;
+          }
+        }
       });
 
       requestAnimationFrame(update);
     }
 
-    setInterval(spawnPlatform, 1500);
+    function gameOver() {
+      gameRunning = false;
+      document.getElementById('gameOver').style.display = 'block';
+    }
+
+    function restartGame() {
+      resetGame();
+      update();
+    }
+
+    document.addEventListener('keydown', (e) => {
+      if ((e.code === 'Space' || e.code === 'ArrowUp') && stickman.onGround && gameRunning) {
+        stickman.vy = jumpForce;
+        stickman.onGround = false;
+      }
+    });
+
+    setInterval(() => {
+      if (gameRunning) spawnPlatform();
+    }, 1300);
+
+    resetGame();
     update();
   </script>
 </body>
