--- a/index.html
+++ b/index.html
@@ -5,56 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stickman Jump Game</title>
   <style>
-    * { box-sizing: border-box; }
     body {
       margin: 0;
-      background: linear-gradient(to top, #6dd5fa, #2980b9);
       overflow: hidden;
-      font-family: sans-serif;
-    }
-    #gameCanvas {
-      display: block;
-      margin: auto;
-      background: #87ceeb;
-      border: 2px solid #444;
-    }
-    #scoreboard {
+      background: linear-gradient(#87ceeb, #f0f8ff);
+      font-family: Arial, sans-serif;
       color: #fff;
       text-align: center;
-      font-size: 1.5em;
-      margin-top: 10px;
+    }
+    canvas {
+      display: block;
+      background: transparent;
+    }
+    #scoreBoard {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 18px;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 10px;
+      border-radius: 10px;
     }
     #gameOverScreen {
       position: absolute;
-      top: 50%;
+      top: 40%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: white;
-      text-align: center;
       display: none;
+      font-size: 24px;
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 30px;
+      border-radius: 10px;
     }
     #gameOverScreen button {
+      margin-top: 15px;
       padding: 10px 20px;
-      font-size: 1em;
-      margin-top: 10px;
-      background-color: #fff;
-      color: #000;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="400" height="300"></canvas>
-  <div id="scoreboard">Score: <span id="score">0</span> | High Score: <span id="highScore">0</span></div>
+  <div id="scoreBoard">Score: <span id="score">0</span> | High Score: <span id="highScore">0</span></div>
   <div id="gameOverScreen">
-    <h1>Game Over</h1>
-    <button onclick="restartGame()">Play Again?</button>
+    <div>Game Over</div>
+    <button onclick="restartGame()">Play Again</button>
   </div>
-  <audio id="jumpSound" src="https://www.soundjay.com/buttons/sounds/button-16.mp3"></audio>
-  <audio id="gameOverSound" src="https://www.soundjay.com/button/sounds/button-10.mp3"></audio>
-  <audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_5ef603e53c.mp3?filename=bubbly-tropical-house-162123.mp3" loop autoplay></audio>
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+
+  <audio id="jumpSound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg"></audio>
+  <audio id="gameOverSound" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg"></audio>
+  <audio id="bgMusic" src="https://www.bensound.com/bensound-music/bensound-littleidea.mp3" loop></audio>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
@@ -62,108 +62,110 @@
     const jumpSound = document.getElementById("jumpSound");
     const gameOverSound = document.getElementById("gameOverSound");
     const bgMusic = document.getElementById("bgMusic");
+    const scoreDisplay = document.getElementById("score");
+    const highScoreDisplay = document.getElementById("highScore");
+    const gameOverScreen = document.getElementById("gameOverScreen");
 
-    let stickman = {
-      x: 50,
-      y: 0,
-      vy: 0,
-      width: 20,
-      height: 40,
-      onGround: false
-    };
-
-    let platforms = [];
-    let clouds = [];
-    let gravity = 0.7;
+    let stickman, platforms, clouds;
+    let gravity = 0.6;
     let jumpForce = -10;
     let gameSpeed = 2;
     let score = 0;
-    let highScore = localStorage.getItem("highScore") || 0;
-    let gameOver = false;
+    let highScore = 0;
+    let isGameOver = false;
 
-    function drawStickman() {
-      ctx.strokeStyle = "#000";
-      ctx.lineWidth = 2;
-
-      // Head
-      ctx.beginPath();
-      ctx.arc(stickman.x + 10, stickman.y, 10, 0, Math.PI * 2);
-      ctx.stroke();
-
-      // Body
-      ctx.beginPath();
-      ctx.moveTo(stickman.x + 10, stickman.y + 10);
-      ctx.lineTo(stickman.x + 10, stickman.y + 30);
-      ctx.stroke();
-
-      // Arms
-      ctx.beginPath();
-      ctx.moveTo(stickman.x + 10, stickman.y + 15);
-      ctx.lineTo(stickman.x - 5, stickman.y + 25);
-      ctx.moveTo(stickman.x + 10, stickman.y + 15);
-      ctx.lineTo(stickman.x + 25, stickman.y + 25);
-      ctx.stroke();
-
-      // Legs
-      ctx.beginPath();
-      ctx.moveTo(stickman.x + 10, stickman.y + 30);
-      ctx.lineTo(stickman.x, stickman.y + 50);
-      ctx.moveTo(stickman.x + 10, stickman.y + 30);
-      ctx.lineTo(stickman.x + 20, stickman.y + 50);
-      ctx.stroke();
+    function init() {
+      bgMusic.play();
+      score = 0;
+      isGameOver = false;
+      stickman = {
+        x: 80,
+        y: 300,
+        vy: 0,
+        width: 20,
+        height: 40,
+        onGround: false
+      };
+      platforms = [{ x: 0, y: 350, width: 800, height: 50 }];
+      clouds = [{ x: 100, y: 50 }, { x: 300, y: 80 }, { x: 600, y: 40 }];
+      gameOverScreen.style.display = "none";
+      update();
     }
 
     function spawnPlatform() {
-      let height = 10;
-      let width = Math.random() * 50 + 30;
-      let y = Math.random() < 0.5 ? canvas.height - 40 : canvas.height - 80;
+      const height = 10;
+      const width = Math.floor(Math.random() * 60) + 40;
+      const y = 320 + Math.random() * 30; // Keep it low and jumbable
       platforms.push({ x: canvas.width, y, width, height });
     }
 
-    function spawnCloud() {
-      clouds.push({ x: canvas.width, y: Math.random() * 100 + 20, width: 40 + Math.random() * 30, speed: 0.5 });
+    function spawnClouds() {
+      clouds.push({ x: canvas.width, y: Math.random() * 100 });
+    }
+
+    function drawStickman() {
+      ctx.beginPath();
+      ctx.strokeStyle = "#000";
+      ctx.lineWidth = 2;
+
+      // Body parts
+      const cx = stickman.x;
+      const cy = stickman.y;
+
+      // Head
+      ctx.arc(cx + 10, cy, 10, 0, Math.PI * 2);
+      ctx.stroke();
+      ctx.beginPath();
+
+      // Body
+      ctx.moveTo(cx + 10, cy + 10);
+      ctx.lineTo(cx + 10, cy + 30);
+      ctx.stroke();
+
+      // Arms
+      ctx.moveTo(cx + 10, cy + 15);
+      ctx.lineTo(cx, cy + 25);
+      ctx.moveTo(cx + 10, cy + 15);
+      ctx.lineTo(cx + 20, cy + 25);
+      ctx.stroke();
+
+      // Legs
+      ctx.moveTo(cx + 10, cy + 30);
+      ctx.lineTo(cx, cy + 40);
+      ctx.moveTo(cx + 10, cy + 30);
+      ctx.lineTo(cx + 20, cy + 40);
+      ctx.stroke();
     }
 
     function update() {
-      if (gameOver) return;
+      if (isGameOver) return;
 
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
       // Clouds
       ctx.fillStyle = "#fff";
-      clouds.forEach((cloud, i) => {
+      clouds.forEach((cloud) => {
         ctx.beginPath();
-        ctx.ellipse(cloud.x, cloud.y, cloud.width, 20, 0, 0, Math.PI * 2);
+        ctx.arc(cloud.x, cloud.y, 20, 0, Math.PI * 2);
         ctx.fill();
-        cloud.x -= cloud.speed;
-        if (cloud.x + cloud.width < 0) clouds.splice(i, 1);
+        cloud.x -= 0.5;
       });
 
-      // Physics
+      // Stickman physics
       stickman.vy += gravity;
       stickman.y += stickman.vy;
+      stickman.onGround = false;
 
-      if (stickman.y + stickman.height >= canvas.height) {
-        stickman.y = canvas.height - stickman.height;
-        stickman.vy = 0;
-        stickman.onGround = true;
-      }
-
-      // Draw stickman
-      drawStickman();
-
-      // Platforms
-      ctx.fillStyle = "#654321";
       platforms.forEach((plat, i) => {
         plat.x -= gameSpeed;
+        ctx.fillStyle = "#654321";
         ctx.fillRect(plat.x, plat.y, plat.width, plat.height);
 
-        // Collision detection
         if (
           stickman.x < plat.x + plat.width &&
           stickman.x + stickman.width > plat.x &&
-          stickman.y + stickman.height < plat.y + 15 &&
-          stickman.y + stickman.height > plat.y
+          stickman.y + stickman.height > plat.y &&
+          stickman.y + stickman.height < plat.y + plat.height + 10
         ) {
           stickman.y = plat.y - stickman.height;
           stickman.vy = 0;
@@ -171,71 +173,67 @@
         }
 
         if (
-          stickman.x < plat.x + plat.width &&
           stickman.x + stickman.width > plat.x &&
-          stickman.y + stickman.height >= plat.y &&
-          stickman.y <= plat.y + plat.height
+          stickman.x < plat.x + plat.width &&
+          stickman.y + stickman.height > plat.y &&
+          stickman.y < plat.y + plat.height
         ) {
-          endGame();
+          if (!stickman.onGround) {
+            triggerGameOver();
+          }
         }
 
-        if (plat.x + plat.width < 0) {
-          platforms.splice(i, 1);
-          score++;
-          gameSpeed += 0.01;
-          document.getElementById("score").innerText = score;
-        }
+        if (plat.x + plat.width < 0) platforms.splice(i, 1);
       });
+
+      drawStickman();
+
+      score++;
+      scoreDisplay.innerText = score;
+      if (score > highScore) {
+        highScore = score;
+        highScoreDisplay.innerText = highScore;
+      }
+
+      if (Math.random() < 0.02) spawnPlatform();
+      if (Math.random() < 0.005) spawnClouds();
+
+      if (score % 300 === 0) gameSpeed += 0.5;
 
       requestAnimationFrame(update);
     }
 
-    function endGame() {
-      gameOver = true;
-      document.getElementById("gameOverScreen").style.display = "block";
-      gameOverSound.play();
-      if (score > highScore) {
-        highScore = score;
-        localStorage.setItem("highScore", highScore);
-        document.getElementById("highScore").innerText = highScore;
+    document.addEventListener("keydown", (e) => {
+      if ((e.code === "Space" || e.code === "ArrowUp") && stickman.onGround) {
+        stickman.vy = jumpForce;
+        stickman.onGround = false;
+        jumpSound.play();
       }
+    });
+
+    canvas.addEventListener("click", () => {
+      if (stickman.onGround && !isGameOver) {
+        stickman.vy = jumpForce;
+        stickman.onGround = false;
+        jumpSound.play();
+      }
+    });
+
+    function triggerGameOver() {
+      isGameOver = true;
+      bgMusic.pause();
+      gameOverSound.play();
+      gameOverScreen.style.display = "block";
     }
 
     function restartGame() {
-      score = 0;
       gameSpeed = 2;
-      platforms = [];
-      stickman.y = canvas.height - stickman.height;
-      stickman.vy = 0;
-      stickman.onGround = true;
-      document.getElementById("score").innerText = score;
-      document.getElementById("gameOverScreen").style.display = "none";
-      gameOver = false;
-      update();
+      bgMusic.currentTime = 0;
+      bgMusic.play();
+      init();
     }
 
-    document.addEventListener("keydown", (e) => {
-      if ((e.code === "Space" || e.code === "ArrowUp") && stickman.onGround && !gameOver) {
-        stickman.vy = jumpForce;
-        stickman.onGround = false;
-        jumpSound.play();
-      }
-    });
-
-    // Touch support
-    document.addEventListener("touchstart", () => {
-      if (stickman.onGround && !gameOver) {
-        stickman.vy = jumpForce;
-        stickman.onGround = false;
-        jumpSound.play();
-      }
-    });
-
-    setInterval(spawnPlatform, 1800);
-    setInterval(spawnCloud, 3000);
-
-    document.getElementById("highScore").innerText = highScore;
-    restartGame();
+    init();
   </script>
 </body>
 </html>
