--- a/index.html
+++ b/index.html
@@ -3,233 +3,215 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stickman Jumper Game</title>
+  <title>Stickman Jump Game</title>
   <style>
     body {
       margin: 0;
+      background: linear-gradient(to top, #1e1e1e, #3b3b3b);
       overflow: hidden;
-      background: linear-gradient(to top, #c2e9fb, #a1c4fd);
+      font-family: sans-serif;
     }
     canvas {
       display: block;
+      margin: 0 auto;
+      background-color: #202020;
+      border: 3px solid #444;
     }
-    #gameOver {
+    #score {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      color: #fff;
+      font-size: 20px;
+    }
+    #game-over {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.8);
-      color: white;
-      padding: 20px;
-      font-family: Arial, sans-serif;
-      font-size: 24px;
       text-align: center;
-      border-radius: 12px;
       display: none;
+      color: white;
     }
-    #scoreBoard {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 20px;
-      font-family: Arial;
-      color: #000;
+    #game-over h1 {
+      font-size: 40px;
+      color: #f44336;
+    }
+    #game-over button {
+      padding: 10px 20px;
+      background-color: #4caf50;
+      border: none;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
-  <canvas id="gameCanvas"></canvas>
-  <div id="gameOver">
-    <p>Game Over</p>
-    <p id="finalScore"></p>
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <div id="score">Score: 0 | High Score: 0</div>
+  <div id="game-over">
+    <h1>Game Over</h1>
     <button onclick="restartGame()">Play Again</button>
   </div>
-  <div id="scoreBoard">Score: <span id="score">0</span> | High Score: <span id="highScore">0</span></div>
 
-  <audio id="jumpSound" src="https://assets.mixkit.co/sfx/preview/mixkit-quick-jump-arcade-game-239.wav"></audio>
-  <audio id="gameOverSound" src="https://assets.mixkit.co/sfx/preview/mixkit-player-losing-or-failing-2042.wav"></audio>
-  <audio id="bgMusic" src="https://assets.mixkit.co/music/preview/mixkit-peaceful-video-game-2356.mp3" loop></audio>
+  <audio id="jumpSound" src="https://www.soundjay.com/buttons/sounds/button-16.mp3"></audio>
+  <audio id="gameOverSound" src="https://www.soundjay.com/button/sounds/button-10.mp3"></audio>
+  <audio id="bgMusic" src="https://www.bensound.com/bensound-music/bensound-littleidea.mp3" loop></audio>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+    const scoreDisplay = document.getElementById("score");
+    const gameOverDisplay = document.getElementById("game-over");
 
     const jumpSound = document.getElementById("jumpSound");
     const gameOverSound = document.getElementById("gameOverSound");
     const bgMusic = document.getElementById("bgMusic");
-    bgMusic.volume = 0.3;
-    bgMusic.play();
 
-    const scoreEl = document.getElementById("score");
-    const highScoreEl = document.getElementById("highScore");
-    const gameOverDiv = document.getElementById("gameOver");
-    const finalScore = document.getElementById("finalScore");
+    let stickman, baseHeight = 50, gravity = 0.6, jumpForce = -10;
+    let platforms = [], clouds = [], gameSpeed = 2;
+    let score = 0, highScore = 0, gameRunning = true;
 
-    let score = 0;
-    let highScore = 0;
-    let speed = 2;
-    let gravity = 0.6;
-    let jumpForce = -12;
-
-    const stickman = {
-      x: 100,
-      y: 0,
-      vy: 0,
-      width: 20,
-      height: 50,
-      onGround: false
-    };
-
-    const baseY = canvas.height - 100;
-    let obstacles = [];
-    let clouds = [];
-
-    function drawStickman() {
-      ctx.strokeStyle = "#000";
-      ctx.lineWidth = 3;
-      // Head
-      ctx.beginPath();
-      ctx.arc(stickman.x + 10, stickman.y, 10, 0, Math.PI * 2);
-      ctx.stroke();
-      // Body
-      ctx.beginPath();
-      ctx.moveTo(stickman.x + 10, stickman.y + 10);
-      ctx.lineTo(stickman.x + 10, stickman.y + 30);
-      ctx.stroke();
-      // Arms
-      ctx.beginPath();
-      ctx.moveTo(stickman.x + 10, stickman.y + 15);
-      ctx.lineTo(stickman.x - 5, stickman.y + 25);
-      ctx.moveTo(stickman.x + 10, stickman.y + 15);
-      ctx.lineTo(stickman.x + 25, stickman.y + 25);
-      ctx.stroke();
-      // Legs
-      ctx.beginPath();
-      ctx.moveTo(stickman.x + 10, stickman.y + 30);
-      ctx.lineTo(stickman.x, stickman.y + 45);
-      ctx.moveTo(stickman.x + 10, stickman.y + 30);
-      ctx.lineTo(stickman.x + 20, stickman.y + 45);
-      ctx.stroke();
+    function init() {
+      stickman = { x: 60, y: canvas.height - baseHeight - 40, vy: 0, width: 20, height: 40, onGround: true };
+      platforms = [];
+      clouds = [];
+      score = 0;
+      gameSpeed = 2;
+      gameRunning = true;
+      gameOverDisplay.style.display = "none";
+      bgMusic.volume = 0.3;
+      bgMusic.play();
+      requestAnimationFrame(update);
     }
 
-    function drawBase() {
-      ctx.fillStyle = "#222";
-      ctx.fillRect(0, baseY, canvas.width, 100);
-    }
-
-    function spawnObstacle() {
-      const width = Math.random() * 30 + 20;
-      const height = Math.random() * 30 + 20;
-      obstacles.push({ x: canvas.width, y: baseY - height, width, height });
-    }
-
-    function spawnCloud() {
-      clouds.push({ x: canvas.width, y: Math.random() * 200 + 20, speed: 0.5 });
-    }
-
-    function drawClouds() {
-      ctx.fillStyle = "#fff";
-      clouds.forEach(c => {
-        ctx.beginPath();
-        ctx.ellipse(c.x, c.y, 30, 20, 0, 0, Math.PI * 2);
-        ctx.fill();
-        ctx.beginPath();
-        ctx.ellipse(c.x + 20, c.y + 5, 25, 15, 0, 0, Math.PI * 2);
-        ctx.fill();
-        ctx.beginPath();
-        ctx.ellipse(c.x - 20, c.y + 5, 25, 15, 0, 0, Math.PI * 2);
-        ctx.fill();
-        c.x -= c.speed;
-      });
-      clouds = clouds.filter(c => c.x + 60 > 0);
-    }
-
-    function jump() {
-      if (stickman.onGround) {
+    document.addEventListener("keydown", (e) => {
+      if ((e.code === "Space" || e.code === "ArrowUp") && stickman.onGround && gameRunning) {
         stickman.vy = jumpForce;
         stickman.onGround = false;
         jumpSound.play();
       }
+    });
+
+    document.addEventListener("touchstart", () => {
+      if (stickman.onGround && gameRunning) {
+        stickman.vy = jumpForce;
+        stickman.onGround = false;
+        jumpSound.play();
+      }
+    });
+
+    function spawnPlatform() {
+      let height = 10 + Math.random() * 10;
+      let width = 30 + Math.random() * 30;
+      platforms.push({ x: canvas.width, y: canvas.height - baseHeight - height, width, height, jumped: false });
     }
 
-    function update() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      drawBase();
-      drawClouds();
+    function spawnCloud() {
+      clouds.push({ x: canvas.width, y: Math.random() * 100, width: 60, height: 30 });
+    }
 
-      // Gravity
+    setInterval(spawnPlatform, 1500);
+    setInterval(spawnCloud, 3000);
+
+    function update() {
+      if (!gameRunning) return;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Base platform
+      ctx.fillStyle = "#333";
+      ctx.fillRect(0, canvas.height - baseHeight, canvas.width, baseHeight);
+
+      // Stickman
       stickman.vy += gravity;
       stickman.y += stickman.vy;
 
-      if (stickman.y + stickman.height >= baseY) {
-        stickman.y = baseY - stickman.height;
+      if (stickman.y > canvas.height - baseHeight - stickman.height) {
+        stickman.y = canvas.height - baseHeight - stickman.height;
         stickman.vy = 0;
         stickman.onGround = true;
       }
 
-      drawStickman();
+      // Draw stickman (actual figure)
+      ctx.strokeStyle = "#0ff";
+      ctx.lineWidth = 2;
+      ctx.beginPath(); // head
+      ctx.arc(stickman.x + 10, stickman.y + 10, 10, 0, Math.PI * 2);
+      ctx.stroke();
+      ctx.beginPath(); // body
+      ctx.moveTo(stickman.x + 10, stickman.y + 20);
+      ctx.lineTo(stickman.x + 10, stickman.y + 35);
+      ctx.stroke();
+      ctx.beginPath(); // arms
+      ctx.moveTo(stickman.x, stickman.y + 25);
+      ctx.lineTo(stickman.x + 20, stickman.y + 25);
+      ctx.stroke();
+      ctx.beginPath(); // legs
+      ctx.moveTo(stickman.x + 10, stickman.y + 35);
+      ctx.lineTo(stickman.x, stickman.y + 45);
+      ctx.moveTo(stickman.x + 10, stickman.y + 35);
+      ctx.lineTo(stickman.x + 20, stickman.y + 45);
+      ctx.stroke();
 
-      // Obstacles
-      obstacles.forEach((obs, i) => {
-        obs.x -= speed;
-        ctx.fillStyle = "#800080";
-        ctx.fillRect(obs.x, obs.y, obs.width, obs.height);
+      // Platforms
+      platforms.forEach((plat, i) => {
+        plat.x -= gameSpeed;
+        ctx.fillStyle = "#f0f";
+        ctx.fillRect(plat.x, plat.y, plat.width, plat.height);
+
+        // Score if passed successfully
+        if (!plat.jumped && plat.x + plat.width < stickman.x) {
+          plat.jumped = true;
+          score++;
+
+          // Speed up every 50 points
+          if (score % 50 === 0) gameSpeed += 1;
+        }
 
         // Collision
         if (
-          stickman.x < obs.x + obs.width &&
-          stickman.x + stickman.width > obs.x &&
-          stickman.y + stickman.height > obs.y
+          stickman.x < plat.x + plat.width &&
+          stickman.x + stickman.width > plat.x &&
+          stickman.y + stickman.height > plat.y &&
+          stickman.y < plat.y + plat.height
         ) {
-          gameOver();
+          endGame();
         }
 
-        // Passed obstacle
-        if (!obs.passed && obs.x + obs.width < stickman.x) {
-          score++;
-          obs.passed = true;
-          scoreEl.textContent = score;
-          if (score % 10 === 0) speed += 0.3;
-        }
+        if (plat.x + plat.width < 0) platforms.splice(i, 1);
       });
 
-      obstacles = obstacles.filter(obs => obs.x + obs.width > 0);
+      // Clouds
+      clouds.forEach((cloud, i) => {
+        cloud.x -= 1;
+        ctx.fillStyle = "#fff";
+        ctx.beginPath();
+        ctx.ellipse(cloud.x, cloud.y, 30, 20, 0, 0, Math.PI * 2);
+        ctx.ellipse(cloud.x + 20, cloud.y + 5, 30, 20, 0, 0, Math.PI * 2);
+        ctx.ellipse(cloud.x - 20, cloud.y + 5, 30, 20, 0, 0, Math.PI * 2);
+        ctx.fill();
+        if (cloud.x + cloud.width < 0) clouds.splice(i, 1);
+      });
 
+      scoreDisplay.textContent = `Score: ${score} | High Score: ${highScore}`;
       requestAnimationFrame(update);
     }
 
-    function gameOver() {
-      gameOverSound.play();
+    function endGame() {
+      gameRunning = false;
       bgMusic.pause();
+      gameOverSound.play();
+      gameOverDisplay.style.display = "block";
       if (score > highScore) highScore = score;
-      highScoreEl.textContent = highScore;
-      finalScore.textContent = `Your Score: ${score}`;
-      gameOverDiv.style.display = "block";
-      cancelAnimationFrame(update);
     }
 
     function restartGame() {
-      obstacles = [];
-      score = 0;
-      speed = 2;
-      stickman.y = 0;
-      stickman.vy = 0;
-      scoreEl.textContent = 0;
-      gameOverDiv.style.display = "none";
-      bgMusic.play();
-      update();
+      init();
     }
 
-    document.addEventListener("keydown", e => {
-      if (e.code === "Space" || e.code === "ArrowUp") jump();
-    });
-    document.addEventListener("touchstart", jump);
-
-    setInterval(spawnObstacle, 2000);
-    setInterval(spawnCloud, 5000);
-    update();
+    init();
   </script>
 </body>
 </html>
